# axondeepseg

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGES.md  CONTRIBUTING.rst  Capture d’écran 2021-04-27 à 16.58.01.py  Dockerfile  LICENSE  MANIFEST.ini  Morphometrics.csv  README.md  ads_plugin.py  config.py  coverage.lcov  custom_matplotlibrc  data_augmentation.py  data_prep.py  environment.yml  environment_Linux.yml  environment_MacOS.yml  environment_Windows.yml  environment_macOS.yml  guideline.py  install_ads  install_ads.bat  model.py  model_cards.py  postBuild  postBuild.txt  postBuild2  pyproject.toml  pytest.ini  requirements.txt  set_config.py  setup.cfg  setup.py  simple_job.sh  simple_job_1.sh  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: napari_install_tests.yaml  pipy_install_tests.yaml  pipy_release.yaml  pipy_release_test.yaml  pre-commit.yml  pypi_install_tests.yaml  release.yaml  run_tests.yaml
.ipynb_checkpoints/: unet-segmentation-checkpoint.ipynb
AxonDeepSeg/: Pierre-Louis_guideline  __init__.py  ads_utils.py  apply_dense_model.py  apply_model.py  apply_model_test_maxpooling2conv.py  config.json  config.py  config_network.json  config_tools.py  data_construction.py  dataset_building.py  dataset_building_nclasses.py  dense_guide.py  dense_network.py  download_model.py  download_tests.py  entry_points.py  final_apply_model.py  final_guide.py  final_network.py  georgji_config_network.json  get_features.py  get_features_nclasses.py  guide.py  guide_SEM.py  guide_SEM3.py  guide_bireli.py  guide_nclasses.py  guide_optim.py  guide_robert.py  init_config_network.json  integrity_test.py  invert_image.py  learn_model.py  mapping_results.py  model_cards.py  model_cards.yaml  mrf.py  my_submission.sh  (+22 more)
AxonDeepSeg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
AxonDeepSeg/ads_napari/: __init__.py  _widget.py  napari.yaml
AxonDeepSeg/config_network/: dense_config_network.json  georgji_config_network.json  pilou_config_network.json
AxonDeepSeg/configs_networks/: robert_config_network.json
AxonDeepSeg/data/: config.cfg  data_augmentation.py  dataset_building.py  input_data.py  patch_extraction.py
AxonDeepSeg/data_management/: config.cfg  data_augmentation.py  dataset_building.py  input_data.py  patch_extraction.py
AxonDeepSeg/data_test/: aggregate_morphometrics.txt  axonlist.npy  stats.csv
AxonDeepSeg/evaluation/: segmentation_scoring.py  visualization.py
ads_base/: __init__.py  ads_utils.py  apply_model.py  download_model.py  download_tests.py  integrity_test.py  model_cards.py  params.py  postprocessing.py  segment.py
data/: config.cfg
default-SEM-model-r20211209v2/: LICENSE  README.md
docs/: .buildinfo  Makefile  documentation.html  environment.yml  genindex.html  index.html  make.bat  objects.inv  requirements.txt  search.html  searchindex.js
guidelines/: Creating_mixed_dataset.ipynb  aldo_data_aug_visualization.ipynb  aldo_project_da_add_0_4.ipynb  aldo_project_da_noise_mul_0.ipynb  aldo_project_da_noise_mul_0_5.ipynb  aldo_project_small_da_0_1.ipynb  aldo_project_small_da_0_2.ipynb  aldo_project_small_da_0_4_many_epochs.ipynb  aldo_project_small_da_0_5.ipynb  aldo_project_small_da_0_75.ipynb  aldo_project_small_da_0_9.ipynb  guide_bireli-aldo_project.ipynb  guide_bireli-aldo_project_da_noise_add_0_4.ipynb  guide_bireli-aldo_project_da_noise_mul_0_4.ipynb  guide_bireli-aldo_project_new_DA_script.ipynb  guide_bireli-aldo_project_small_da_0_5-Copy1.ipynb  guide_bireli.ipynb  guide_bireli.py  guide_data_building-aldo_2_classes.ipynb  guide_data_building.ipynb  guide_local.py  model_comparison.ipynb  multi_apply_model.ipynb  segmentation_image.ipynb  statistics_generation.ipynb  submission_generator.ipynb  submission_generator_tools.py  test_segmentation-aldo.ipynb  test_segmentation.ipynb
models/: config_file_example.json  config_to_csv.py
napari-ADS/: setup.cfg
napari-cookiecutter/napari-cookietest/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
napari-cookiecutter/napari-cookietest/src/napari_cookietest/: __init__.py  _reader.py  _widget.py  _writer.py  napari.yaml
napari-cookiecutter/napari-cookietest/src/napari_cookietest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
napari-cookiecutter/napari-cookietest/src/napari_cookietest/_tests/: test_reader.py  test_widget.py  test_writer.py
notebooks/: 00-getting_started.ipynb  01-guide_dataset_building.ipynb  01-performance_metrics.ipynb  02-morphometrics_extraction.ipynb  02-training_guideline.ipynb  03-performance_metrics.ipynb  04-morphometrics_extraction.ipynb  Creating_mixed_dataset.ipynb  analysis_proba.ipynb  dataset_analysis.ipynb  generate_axons_from_myelin.ipynb  get_masks.ipynb  getting_started.ipynb  guide_bireli.ipynb  guide_data_building.ipynb  guide_dataset_building.ipynb  guide_local.py  guideline.py  merge_masks.ipynb  morphometrics.ipynb  morphometrics_extraction.ipynb  multi_apply_model.ipynb  myelin_separation.ipynb  noise_simulation.ipynb  notebook_patch_extraction.ipynb  old_training.ipynb  performance_metrics.ipynb  prediction_overlap.ipynb  segmentation_image.ipynb  statistics_generation.ipynb  submission_generator.ipynb  submission_generator_tools.py  test_data_augmentation.ipynb  tf_test.ipynb  train_mikula_scratch_finetuned.ipynb  training_guideline.ipynb  training_guideline_final.ipynb
plugins/: README.md  pyproject.toml  setup.cfg  tox.ini
plugins/ads_napari/: Settings_menu_ui.ui  __init__.py  _widget.py  napari.yaml  settings_menu_ui.py
plugins/napari_ADS/: __init__.py  _widget.py  napari.yaml  settings_menu_ui.py
plugins/test/: test_widget.py
scripts/: batch_segmentation.sh
test/: test_ads_utils.py  test_apply_model.py  test_config_tools.py  test_download_models.py  test_download_tests.py  test_integrity_test.py  test_model_cards.py  test_params.py  test_postprocessing.py  test_segment.py  test_train_network.py
tmp/: Morphometrics.csv
(+189 files in other folders)
