[metadata]
name = ads_napari
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari[all]
    qtpy

[options.entry_points]
napari.manifest =
    ads_napari = ads_napari:napari.yaml

[options.package_data]
ads_napari = napari.yaml
